# mini-ai-projects

./: .gitignore  pyproject.toml
