[project]
name = "my-project"
version = "0.1.0"
requires-python = ">=3.12"


dependencies = [
  "duckdb",
  "pandas"
]


[dependency-groups]
dev = [
  "ruff",
  "sqlfluff",
  "marimo",
  "ipykernel",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.sqlfluff.core]
dialect = "snowflake"
max_line_length = 120
